# ek

./: .buildinfo  .gitignore  AGENTS.md  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  table_of_contents.html
.claude/: CLAUDE.md
.claude/skills/: ek-dev-add-metric  ek-dev-add-signal  ek-dev-agents  ek-dev-architecture  ek-dev-licensing  ek-dev-ocr
.github/scripts/: check_licenses.py
.github/workflows/: license-gate.yml
_modules/: index.html
_modules/dol/: caching.html
_modules/ek/: __main__.html  base.html  canonicalize.html  facade.html  harness.html  registry.html  stores.html  tools.html  validate.html
_modules/ek/agents/: base.html  bridge.html  cost.html  harness.html  judge.html  metrics.html  reliability.html  toolcalls.html  trajectory.html
_modules/ek/metrics/: anls.html  fields.html  graphs.html  spans.html  strings.html  tables.html
_modules/ek/ocr/: benchmark.html  bridge.html  profiles.html  tables.html
_modules/ek/qe/: calibrate.html  decide.html  rover.html  signals.html  verifiers.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: ek.rst.txt
_sources/module_docs/ek/: __main__.rst.txt  agents.rst.txt  base.rst.txt  canonicalize.rst.txt  facade.rst.txt  harness.rst.txt  metrics.rst.txt  ocr.rst.txt  qe.rst.txt  registry.rst.txt  stores.rst.txt  tools.rst.txt  validate.rst.txt
_sources/module_docs/ek/agents/: base.rst.txt  bridge.rst.txt  cost.rst.txt  harness.rst.txt  judge.rst.txt  metrics.rst.txt  reliability.rst.txt  toolcalls.rst.txt  trajectory.rst.txt
_sources/module_docs/ek/metrics/: anls.rst.txt  fields.rst.txt  graphs.rst.txt  spans.rst.txt  strings.rst.txt  tables.rst.txt
_sources/module_docs/ek/ocr/: benchmark.rst.txt  bridge.rst.txt  profiles.rst.txt  tables.rst.txt
_sources/module_docs/ek/qe/: calibrate.rst.txt  decide.rst.txt  rover.rst.txt  signals.rst.txt  verifiers.rst.txt
ek/: __init__.py  __main__.py  base.py  canonicalize.py  facade.py  harness.py  registry.py  stores.py  tools.py  validate.py
ek/agents/: __init__.py  base.py  bridge.py  cost.py  harness.py  judge.py  metrics.py  reliability.py  toolcalls.py  trajectory.py
ek/metrics/: __init__.py  anls.py  fields.py  graphs.py  spans.py  strings.py  tables.py
ek/ocr/: __init__.py  benchmark.py  bridge.py  profiles.py  tables.py
ek/qe/: __init__.py  calibrate.py  decide.py  rover.py  signals.py  verifiers.py
misc/docs/: ek_01 --  ocr-systems-capability-inventory.md  ek_02 -- Reference-Based (Offline) Evaluation of Information-Extraction Systems.md  ek_03 -- Reference-Free Quality Estimation, Confidence, Calibration & Selective Prediction.md  ek_04 -- Post-Extraction Validation & Correction (incl. Post-OCR).md  ek_05 -- HITL Review UX, Active Learning & Production Monitoring for Document-Understanding Systems.md  ek_06 -- library-landscape-and-integration-map.md  ek_07 -- Evaluating AI Agents & Assistants (Conceptual Map).md  ek_08 -- Task-Success & Outcome-Based Agent Evaluation.md  ek_09 -- LLM-as-Judge & Reference-Free Agent Quality Estimation.md  ek_10 -- Trajectory, Tool-Use & Multi-Turn Agent Evaluation.md  ek_11 -- Cost per Successful Task & Agent Evaluation Economics.md  ek_12 -- Agent-Evaluation Library Landscape & ek Integration Map.md  information-extraction-evaluation-conceptual-map.md
misc/docs/prompts/: deep-research-plan-ie-evaluation.md
module_docs/: ek.html
module_docs/ek/: __main__.html  agents.html  base.html  canonicalize.html  facade.html  harness.html  metrics.html  ocr.html  qe.html  registry.html  stores.html  tools.html  validate.html
module_docs/ek/agents/: base.html  bridge.html  cost.html  harness.html  judge.html  metrics.html  reliability.html  toolcalls.html  trajectory.html
module_docs/ek/metrics/: anls.html  fields.html  graphs.html  spans.html  strings.html  tables.html
module_docs/ek/ocr/: benchmark.html  bridge.html  profiles.html  tables.html
module_docs/ek/qe/: calibrate.html  decide.html  rover.html  signals.html  verifiers.html
skills/ek-dev-add-metric/: SKILL.md
skills/ek-dev-add-signal/: SKILL.md
skills/ek-dev-agents/: SKILL.md
skills/ek-dev-architecture/: SKILL.md
skills/ek-dev-licensing/: SKILL.md
skills/ek-dev-ocr/: SKILL.md
tests/: test_agents.py  test_anls_metric.py  test_calibrate.py  test_data_model.py  test_decide.py  test_graph_metric.py  test_harness.py  test_import_purity.py  test_license_gate.py  test_metrics_facade.py  test_ocr_benchmark.py  test_ocr_tables.py  test_qe_facade.py  test_registry.py  test_rover.py  test_signals.py  test_span_f1_metric.py  test_stores.py  test_table_metrics.py  test_validate.py  test_verifiers.py  test_zzz_windows_diag.py
